feat!: be compatible with the latest backend (#1762)
* fix: use ack read to increase read counts

* fix: follow the upstream backend data structure

* docs: readme

* fix(timeline): update 'important' property from 'note.hasImportant' to 'note.bookmark'

* fix: update to be compatible with the latest backend

* fix: remove useMusic hook

* ci: pnpm version

* fix: import an non-existed music hook

* ci: build ci error

* ci: use pnpm instead of yarn

* docs: readme

* Revert "fix: remove useMusic hook"

This reverts commit 598c33bf386add582ff44d53b3c3202f30b2004d.

* feat!: support note music

* fix: xlog summary cannot display

* docs: breaking changes doc

* ci: improve release ci

* release: v4.6.6

* ci: add docker ci

* feat: add `music` into `PostMeta`

* docs: readme

* ci: setup release env

* docs: readme link

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - '**'
+    paths-ignore:
+      - README.md
+      - LICENSE
   pull_request:
     branches: [master]
 
@@ -16,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [20.x]
 
     steps:
       - uses: actions/checkout@v4
@@ -41,13 +44,13 @@ jobs:
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/pnpm-lock.yaml') }}-
-      - uses: pnpm/action-setup@v2.4.0
+      - uses: pnpm/action-setup@v3
         with:
-          version: 8.x.x
+          version: latest
           run_install: true
       - name: Build project
         run: |
-          yarn build
-          yarn lint
+          pnpm build
+          pnpm lint
         env:
           CI: true
