--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -7,6 +7,9 @@ on:
       - main # change this if your default branch is named differently
       - master
       - dev
+    paths-ignore:
+      - README.md
+      - LICENSE
   workflow_dispatch:
 
 defaults:
@@ -23,7 +26,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '20.x'
 
       # If pnpm is used, you need to switch the previous step with the following one. pnpm does not create a package-lock.json
       # so the step above will fail to pull dependencies
@@ -31,7 +34,7 @@ jobs:
         name: Install pnpm
         id: pnpm-install
         with:
-          version: 8
+          version: latest
           run_install: true
 
       - name: Restore next build
