--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mx-kami",
   "license": "GPL-3.0",
   "private": false,
-  "version": "4.6.5",
+  "version": "4.6.6",
   "engines": {
     "node": ">=v14.21.3"
   },
@@ -60,7 +60,7 @@
   "dependencies": {
     "@floating-ui/react-dom": "2.0.2",
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@mx-space/api-client": "1.5.1",
+    "@mx-space/api-client": "1.13.1",
     "@sentry/nextjs": "7.74.1",
     "axios": "1.5.1",
     "clsx": "2.0.0",
@@ -142,5 +142,6 @@
     "budget": 358400,
     "budgetPercentIncreaseRed": 20,
     "showDetails": true
-  }
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
