--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next": "13.5.3",
     "next-seo": "6.1.0",
     "next-suspense": "0.2.3",
+    "pug": "^3.0.3",
     "randomcolor": "0.6.2",
     "react": "18.2.0",
     "react-countup": "6.4.2",
@@ -86,7 +87,7 @@
     "react-masonry-css": "1.0.16",
     "react-message-popup": "1.1.3",
     "react-shortcut-guide": "1.0.0",
-    "react-smooth-number-counter": "npm:@reactify-components/smooth-number-counter",
+    "react-smooth-number-counter": "npm:@reactify-components/smooth-number-counter@^0.0.2",
     "react-toastify": "9.1.3",
     "react-use": "17.4.0",
     "remove-markdown": "0.5.0",
