feat: update dev server config and remove menu items

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "start": "npm run dev",
     "prebuild": "rimraf .next",
     "predev": "rimraf .next",
-    "dev": "cross-env NODE_ENV=development next dev -p 2323",
+    "dev": "cross-env NODE_ENV=development next dev -p 2323 -H 127.0.0.1",
     "analyze": "cross-env NODE_ENV=production ANALYZE=true BUNDLE_ANALYZE=browser next build",
     "build": "cross-env NODE_ENV=production next build",
     "build:ci": "cross-env NODE_ENV=production CI=true next build",
